@@ -1,3 +1,10 @@
+2008-10-09  Stefan Kost  <ensonic@users.sf.net>
+
+	* ext/amrwb/gstamrwbenc.c:
+	* ext/amrwb/gstamrwbenc.h:
+	  Pass the discont flag from the input buffer on to the output buffer in
+	  the AMR encoder.
+
 2008-10-09  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
 
 	* gst/flv/gstflvparse.c: (gst_flv_parse_audio_negotiate),
